# model-experimentation

./: .gitignore  Makefile  README.md  github.txt  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
model_experimentation/: __init__.py  dataset.py  features.py  plots.py
model_experimentation/modeling/: predict.py  train.py
models/forecasting/: prophet1.joblib
models/predictive/: xgb_2.joblib
notebooks/eda/: bajaj_sidhant-25246568-data_tranformation_forecasting.ipynb  bajaj_sidhant-25246568-data_tranformation_predictive.ipynb  bajaj_sidhant-25246568-eda.ipynb
notebooks/forecasting/: prophet.ipynb
notebooks/predictive/: bajaj_sidhant-25246568-data_sampling_model_picking.ipynb  bajaj_sidhant-25246568-decision_trees.ipynb  bajaj_sidhant-25246568-linear_regression.ipynb  bajaj_sidhant-25246568-xgboost.ipynb
