[tool.poetry]
name = "model-experimentation"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"
pandas = "2.2.2"
jupyterlab = "4.2.3"
scikit-learn = "1.5.1"
downcast = "^0.0.8"
plotly-express = "^0.4.1"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
category-encoders = "^2.6.3"
joblib = "^1.4.2"
xgboost = "^2.1.1"
lightgbm = "^4.5.0"
prophet = "1.1.5"
numpy = "2.1.1"
starlette = "^0.39.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
